--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </footer>
+  <script src="app.js"></script>
 </body>
 </html>
