fem_faq_accordion_card: completing design and styles pc and mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="container">
       <div class="card">
         <div class="card-image">
-          <img src="./images/illustration-woman-online-desktop.svg" alt="">
+          <img class="pc" src="./images/illustration-woman-online-desktop.svg" alt="">
+          <img class="sp" src="./images/illustration-woman-online-mobile.svg" alt="">
         </div>
         <div class="card-content">
           <h2>FAQ</h2>
